syntax = "proto3";

package certificate;

import "p2p/proto/common.proto";
import "p2p/proto/consensus.proto";
import "p2p/proto/transaction.proto";

message CommitSignature {
    // TODO - add flag (no vote, nil, value?)
    Address validator_address    = 1;
    ConsensusSignature signature = 2;
}

message AggregatedSignature {
    repeated CommitSignature signatures = 1;
}

message CommitCertificate {
    uint64 fork_id = 1;
    uint64 block_number = 2;
    uint32 round = 3;
    Hash block_hash = 4;
    AggregatedSignature aggregated_signature = 5;
}

